fix : typo issues